base/solution0006/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution0006
  namespace: tenant-example
  labels:
    app: solution0006
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution0006
  template:
    metadata:
      labels:
        app: solution0006
    spec:
      containers:
      - name: solution0006
        image: 558232680640.dkr.ecr.us-east-1.amazonaws.com/example-repo:main-0
