base/solution0006/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution0006-service
  namespace: tenant-example
  labels:
    app: solution0006
spec:
 selector:
   app: solution0006
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
